Fix padding on small screen

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -859,7 +859,7 @@ $xy-grid: true;
 $grid-container: $global-width;
 $grid-columns: 12;
 $grid-margin-gutters: (
-  small: 20px,
+  small: 5rem,
   medium: 30px
 );
 $grid-padding-gutters: $grid-margin-gutters;
